[gd_scene load_steps=4 format=3 uid="uid://dowvk42pqj4u4"]

[ext_resource type="Script" path="res://addons/orgprez/OrgPrezStepper.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cypqlui1uoofd" path="res://addons/orgprez/OrgPrezOutline.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cxxkv4w4el1ed" path="res://addons/orgprez/OrgPrezChunkList.tscn" id="6"]

[node name="OrgPrezStepper" type="Window"]
title = "stepper"
size = Vector2i(640, 480)
exclusive = true
popup_window = true
script = ExtResource("1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="toolbar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBox/toolbar"]
layout_mode = 2
toggle_mode = true
text = "play"

[node name="StepButton" type="Button" parent="VBox/toolbar"]
layout_mode = 2
text = "step"

[node name="spacer" type="Control" parent="VBox/toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="status" type="Label" parent="VBox/toolbar"]
layout_mode = 2

[node name="navigator" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Outline" parent="VBox/navigator" instance=ExtResource("5")]
modulate = Color(1, 1, 1, 0.623529)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ChunkList" parent="VBox/navigator" instance=ExtResource("6")]
modulate = Color(1, 1, 1, 0.623529)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBox/toolbar/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBox/toolbar/StepButton" to="." method="_on_StepButton_pressed"]
[connection signal="chunk_selected" from="VBox/navigator/ChunkList" to="." method="_on_ChunkList_chunk_selected"]
